fix image sizes on mobile

--- a/site/_themes/hyde/css/styles.css
+++ b/site/_themes/hyde/css/styles.css
@@ -8,6 +8,7 @@
 
 :root {
    --color-sidebar: #8e560c;
+   --left-content-margin: 35%;
 }
 
 /* article {content-visibility: auto;} */
@@ -56,11 +57,6 @@ code {
 .theme-base-0b .content a,
 .theme-base-0b .related-posts li a:hover {
    color: #690900;
-}
-
-.copyright-container {
-   display: flex;
-   justify-content: flex-end;
 }
 
 .copyright {
@@ -134,4 +130,33 @@ code {
 
 .post .meta {
    color: var(--color-heading);
+}
+
+.social img {
+   max-width: 48px;
+}
+
+@media (min-width: 48em) {
+   .sidebar {
+      width: 30%;
+   }
+}
+
+@media (min-width: 64em) {
+   .copyright-container {
+      margin-left: var(--left-content-margin);
+   }
+
+   .content {
+      margin-left: var(--left-content-margin);
+      max-width: 1200px;
+   }
+
+   .content p {
+      max-width: 65ch;
+   }
+}
+
+.index-content {
+   font-size: 20px;
 }
